// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r8:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r8:"
           class="TextField_textbox__qbZlk    undefined"
           value
    >
    <div id="textFieldErrorId-:r7:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r10:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r10:"
           class="TextField_textbox__qbZlk    undefined"
           aria-describedby="testID"
           value
    >
    <div id="textFieldErrorId-:rv:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAs play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:ra:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <textarea id="textFieldTextboxId-:ra:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r  undefined"
    >
    </textarea>
    <div id="textFieldErrorId-:r9:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label for="htmlid"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="htmlid"
           class="TextField_textbox__qbZlk    undefined"
           data-testid="123ID"
           value
    >
    <div id="textFieldErrorId-:r2:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:ri:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:ri:"
           class="TextField_textbox__qbZlk    undefined"
           autocomplete="given-name"
           inputmode="text"
           name="test_name"
           placeholder="Kari Nordmann"
           value
    >
    <div id="textFieldErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r5:"
           class="TextField_label__K0isy  dummyClassname"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r5:"
           class="TextField_textbox__qbZlk    dummyClassname"
           aria-describedby="textFieldErrorId-:r4:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW dummyClassname">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rg:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rg:"
           class="TextField_textbox__qbZlk    undefined"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rf:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1a:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
      <span class="TextField_labelDescription__WCNdq">
        En liten beskrivelse tekst
      </span>
    </label>
    <input id="textFieldTextboxId-:r1a:"
           class="TextField_textbox__qbZlk    undefined"
           value
    >
    <div id="textFieldErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rc:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rc:"
           class="TextField_textbox__qbZlk    undefined"
           disabled
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rb:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r12:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r12:"
           class="TextField_textbox__qbZlk    undefined"
           value
    >
    <div id="textFieldErrorId-:r11:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessageAndHasError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r14:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r14:"
           class="TextField_textbox__qbZlk    undefined"
           aria-describedby="textFieldErrorId-:r13:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r13:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1i:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        TextField har blitt blurret
      </span>
    </label>
    <input id="textFieldTextboxId-:r1i:"
           class="TextField_textbox__qbZlk    undefined"
           value
    >
    <div id="textFieldErrorId-:r1h:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHasErrorAndAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r17:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r17:"
           class="TextField_textbox__qbZlk    undefined"
           aria-describedby="konsumentId textFieldErrorId-:r16:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r16:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1c:"
           class="TextField_label__K0isy TextField_srOnly__0+S1D undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r1c:"
           class="TextField_textbox__qbZlk    undefined"
           value
    >
    <div id="textFieldErrorId-:r1b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithIsLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1e:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r1e:"
           class="TextField_textbox__qbZlk TextField_textbox_large__Qmwm8   undefined"
           value
    >
    <div id="textFieldErrorId-:r1d:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rq:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rq:"
           class="TextField_textbox__qbZlk    undefined"
           maxlength="50"
           minlength="10"
           value
    >
    <div id="textFieldErrorId-:rp:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rs:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rs:"
           class="TextField_textbox__qbZlk    undefined"
           pattern="[a-z]"
           value
    >
    <div id="textFieldErrorId-:rr:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rk:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rk:"
           class="TextField_textbox__qbZlk    undefined"
           readonly
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rj:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="TextField_textbox__qbZlk    undefined"
           value
           name="dummyNameForwardedFromRef"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rm:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rm:"
           class="TextField_textbox__qbZlk    undefined"
           required
           value
    >
    <div id="textFieldErrorId-:rl:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:ro:"
           class="TextField_label__K0isy  undefined"
    >
      <span class="TextField_label_required__n7aHl">
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:ro:"
           class="TextField_textbox__qbZlk    undefined"
           required
           value
    >
    <div id="textFieldErrorId-:rn:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRows play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:ru:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <textarea id="textFieldTextboxId-:ru:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r  undefined"
              rows="4"
    >
    </textarea>
    <div id="textFieldErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1g:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r1g:"
           class="TextField_textbox__qbZlk    undefined"
           value
    >
    <div id="textFieldErrorId-:r1f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:re:"
           class="TextField_label__K0isy  undefined"
    >
      <span class>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:re:"
           class="TextField_textbox__qbZlk    undefined"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
